# drats2

./: .gitignore  COPYING  README.md  build_python_locale.sh  build_python_package.sh  build_python_packages.sh  developers_notes.txt  install_debian.sh  install_fedora.sh  install_linux.sh  install_mobaxterm.sh  install_msys2.sh  install_windows.ps1  pylintrc  python_pre_build.py
build_python_rq/: requirements.txt
common/docs/source/: index.rst
common/src/drats_common/: NEWS.rst
drats_common/: pyproject.toml
drats_common/docs/source/: common_args.rst  conf.py  index.rst  language.rst
drats_common/src/drats_common/: common_args.py  language.py
drats_common/src/drats_common/locale/de/LC_MESSAGES/: drats.mo  drats.po
drats_common/src/drats_common/locale/en/LC_MESSAGES/: drats.mo  drats.po
drats_common/src/drats_common/locale/es/LC_MESSAGES/: drats.mo  drats.po
drats_common/src/drats_common/locale/it/LC_MESSAGES/: drats.mo  drats.po
drats_common/src/drats_common/locale/nl/LC_MESSAGES/: drats.mo  drats.po
drats_gtk/: NEWS.rst  README.md  hello_world_gtk.py
drats_gtk/docs/source/: conf.py  index.rst
drats_gtk/src/drats_gtk/: hello_world_gtk.py
drats_kivy/: NEWS.rst  README.md  hello_world_kivy.py  pyproject.toml
drats_kivy/docs/source/: conf.py  index.rst
drats_kivy/src/drats_kivy/: hello_world_kivy.py  setup_version.py
drats_text/: NEWS.rst  README.md  pyproject.toml
drats_text/docs/source/: conf.py  index.rst
drats_text/src/drats_text/: hello_world.py
drats_tk/: NEWS.rst  README.md  hello_world_tk.py  pyproject.toml
drats_tk/docs/source/: conf.py  index.rst
drats_tk/src/drats_tk/: hello_world_tk.py
drats_wx/: NEWS.rst  README.md  hello_world_wx.py  pyproject.toml
drats_wx/docs/source/: conf.py  index.rst
drats_wx/src/drats_wx/: hello_world_wx.py
fedora/: requirements.txt
macos/: requirements.txt
mobaxterm/: requirements.txt
repeater/: README.md  pyproject.toml
repeater/docs/source/: conf.py  index.rst  repeater_configure.rst
repeater/src/drats_repeater/: hello_world.py  repeater_configure.py
typings/: __builtins__.pyi
version_git/: README.md  pyproject.toml
version_git/docs/source/: conf.py  index.rst  version_git.rst
version_git/src/: PKG-INFO
version_git/src/version_git/: version_git.py
windows/: requirements.txt
windows/development/: requirements.txt
