[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "version_git"
dynamic = ["version"]
description = "Program Version from Git Describe"
readme = "README.md"
license = {file = 'LICENSE'}
classifiers = [
    "License :: OSI Approved :: GPL-3.0-only"
]

keywords = ["version", "git"]

authors = [
  {name = "John E. Malmberg WB8TYW", email = "wb8tyw@qsl.net"}
]

maintainers = [
  {name = "Maurizio Andreotti IZ2LXI", email = "maurizioandreottilc@gmail.com"},
  {name = "John E. Malmberg WB8TYW", email = "wb8tyw@qsl.net"}
]

[project.urls]
Homepage = "https://groups.io/g/d-rats"
Repository = "https://github.com/ham-radio-software/drats2"
Issues = "https://github.com/ham-radio-software/drats2/issues"
Documentation = "https://github.com/ham-radio-software/drats2/wiki"

[tool.towncrier]
package = 'version_git'
package_dir = 'src'

[tool.setuptools.dynamic]
version = {attr = "version_git.__version__"}
